--- a/src/Layout/Header/BurgerMenu/BurgerMenu.module.scss
+++ b/src/Layout/Header/BurgerMenu/BurgerMenu.module.scss
@@ -1,19 +1,20 @@
 .BurgerMenuWrapper {
 	display: flex;
 	flex-direction: column;
+	gap: 10px;
 	& > * {
-		font-size: var(--font-size-l);
+		font-size: 20px;
 		font-family: var(--main-family);
 		color: var(--font-color-main);
 	}
 }
 
 .burgerMenu {
-	margin: 0 calc(var(--index) * 2);
 	display: flex;
 	color: var(--font-color-main);
-	font-size: var(--font-size-l);
+	font-size: 30px;
 	align-items: center;
+	padding-left: 10px;
 }
 
 .burgerMenuBody {
