--- a/src/pages/AboutPage/ui/components/AdvantagesSection/Advantage/Advantage.module.scss
+++ b/src/pages/AboutPage/ui/components/AdvantagesSection/Advantage/Advantage.module.scss
@@ -9,7 +9,7 @@
 }
 .icon {
 	color: var(--font-color-main);
-	font-size: calc(var(--index) * 5);
+	font-size: calc(var(--font-size-m) * 5);
 }
 .title {
 	font-size: var(--font-size-l);
