--- a/src/pages/FavorPage/ui/components/AboutFavorsSection/AboutFavorsSection.module.scss
+++ b/src/pages/FavorPage/ui/components/AboutFavorsSection/AboutFavorsSection.module.scss
@@ -1,10 +1,10 @@
 .aboutFavorsSection {
 	width: 100%;
-	min-height: 40vh;
 	display: flex;
 	align-items: center;
 	justify-content: center;
 	flex-direction: column;
+	padding: 50px 0;
 }
 .innerContainer {
 	height: 100%;
