--- a/src/pages/PartnersPage/components/FeedBack/FeedBack.module.scss
+++ b/src/pages/PartnersPage/components/FeedBack/FeedBack.module.scss
@@ -23,7 +23,7 @@
 	font-size: var(--font-size-m);
 	color: var(--font-color-main);
 	cursor: pointer;
-	margin-top: calc(var(--index) * 1.5);
+	margin-top: 15px;
 	transition: 0.3s;
 	align-items: center;
 	justify-content: center;
