--- a/src/Layout/Header/Header.module.scss
+++ b/src/Layout/Header/Header.module.scss
@@ -4,11 +4,14 @@
 	flex-direction: row;
 	justify-content: center;
 	background-color: var(--main-color);
-	height: 10vh;
-	box-shadow: 0px 1px 20px 5px #000;
+	height: 90px;
+	box-shadow: 0px 1px 4px 0px #000;
 }
+
 .bigNav {
 	display: flex;
+	flex-direction: row;
+	gap: 30px;
 }
 
 .burgerWrapper {
@@ -21,5 +24,6 @@
 @media (max-width: 1000px) {
 	.header {
 		justify-content: flex-start;
+		height: 50px;
 	}
 }
