--- a/src/pages/AboutPage/ui/components/CertificateSection/CertificateSection.module.scss
+++ b/src/pages/AboutPage/ui/components/CertificateSection/CertificateSection.module.scss
@@ -1,9 +1,6 @@
 .CertificateSectionWrapper {
-	min-height: 70vh;
 	background-color: var(--dark-color);
-	margin-top: calc(var(--index));
-	padding: calc(var(--index) * 2) 0;
-	filter: drop-shadow(2px 4px 6px #000);
+	box-shadow: 0px 1px 4px 1px #000;
 }
 .CertificatesContainer {
 	height: 70%;
@@ -39,6 +36,5 @@
 	}
 	.imageWrapper {
 		border-radius: 0;
-		filter: drop-shadow(0px 0px 20px #000);
 	}
 }
