--- a/src/pages/ArticlePage/ui/ArticlePage.module.scss
+++ b/src/pages/ArticlePage/ui/ArticlePage.module.scss
@@ -1,5 +1,5 @@
 .ArticlesPageWrapper {
-	min-height: 67vh; // 10vh - header, 23vh - footer
+	min-height: 67vh;
 	width: 100%;
 	display: flex;
 	flex-direction: column;
