--- a/src/pages/ArticlePage/ui/components/ArticleList/ArticleCard/ArticleCard.module.scss
+++ b/src/pages/ArticlePage/ui/components/ArticleList/ArticleCard/ArticleCard.module.scss
@@ -1,6 +1,6 @@
 .ArticleCardWrapper {
 	box-sizing: border-box;
-	padding: calc(var(--index) * 0.6);
+	padding: 20px;
 	width: 100%;
 	list-style: none;
 	background-color: var(--main-color);
@@ -22,7 +22,7 @@
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
-	padding: calc(var(--index));
+	padding: 10px;
 }
 .date {
 	font-family: var(--main-family);
@@ -37,5 +37,6 @@
 }
 .preview {
 	border-radius: 10px;
-	width: 20%;
+	height: 100%;
+	max-height: 150px;
 }
