--- a/src/pages/ArticlePage/ui/components/ArticleList/ArticleList.module.scss
+++ b/src/pages/ArticlePage/ui/components/ArticleList/ArticleList.module.scss
@@ -6,7 +6,7 @@
 	align-items: center;
 }
 .ArticlesList {
-	gap: calc(var(--index) * 0.4);
+	gap: 10px;
 	width: 100%;
 	margin: 0 auto;
 	display: flex;
