--- a/src/pages/ContactPage/ui/ContactsPage.module.scss
+++ b/src/pages/ContactPage/ui/ContactsPage.module.scss
@@ -3,22 +3,16 @@
 	overflow: hidden;
 	display: flex;
 	flex-direction: row;
-	min-height: 67vh;
 	align-items: center;
+	height: 100%;
+	padding: 20px 0;
 }
+
 .contactPageContainer {
 	width: 80%;
 	max-width: 1600px;
 }
-.background {
-	transform: scale(1.01);
-	position: absolute;
-	width: 100%;
-	height: 100%;
-	background-image: url(/src/assets/images/background.png);
-	z-index: -1;
-	filter: brightness(0.5) blur(1.5px);
-}
+
 @media (max-width: 800px) {
 	.ContactPageWrapper {
 		flex-direction: column;
