--- a/src/pages/FavorPage/ui/components/FavorCards/FavorCards.module.scss
+++ b/src/pages/FavorPage/ui/components/FavorCards/FavorCards.module.scss
@@ -6,7 +6,7 @@
 	justify-content: center;
 	align-items: center;
 	background-color: var(--dark-color);
-	filter: drop-shadow(2px 4px 6px #000);
+	box-shadow: 0px 1px 4px 1px #000;
 }
 .innerContainer {
 	width: 90%;
@@ -14,7 +14,7 @@
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	margin: calc(var(--index) * 2) 0;
+	margin: 20px 0;
 }
 .cardContainer {
 	display: flex;
