--- a/src/pages/FavorPage/ui/components/FavorList/FavorCard/FavorCard.module.scss
+++ b/src/pages/FavorPage/ui/components/FavorList/FavorCard/FavorCard.module.scss
@@ -1,17 +1,19 @@
 .FavorCardWrapper {
-	border-radius: 10px;
+	padding: 30px;
+	margin: 10px;
+	border-radius: 40px;
 	width: 100%;
-	height: 400px;
+	max-width: 600px;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 	justify-content: space-between;
-	padding-top: 20px;
 	background-color: var(--main-color);
 	overflow: hidden;
 	transition: 0.3s;
 	position: relative;
 	z-index: 1;
+	gap: 20px;
 
 	& > * {
 		color: var(--font-color-main);
@@ -19,30 +21,40 @@
 		font-family: var(--main-family);
 	}
 }
+
+.descriptionList {
+	list-style: none;
+	display: flex;
+	flex-direction: column;
+	gap: 10px;
+}
+
 .FavorCardWrapper:hover {
 	z-index: 10;
-	scale: 1.1;
-	filter: brightness(1.3);
+	scale: 1.025;
 }
+
 .descriptionItem {
 	font-size: var(--font-size-s);
 }
+
 .infoBtn {
+	border-radius: 10px;
 	width: 100%;
 	border: none;
 	background-color: var(--contrast-color-dark);
 	font-size: var(--font-size-s);
 	height: 60px;
 	transition: 0.3s;
+	cursor: pointer;
+
 	& > * {
-		color: var(--font-color-main);
+		color: var(--font-color-main) !important;
 		text-decoration: none;
 	}
 
 	&:hover {
-		box-shadow: 0px -1px 12px 0px #000000;
 		background-color: var(--contrast-color-main);
-		cursor: pointer;
 	}
 }
 
