--- a/src/pages/FavorPage/ui/components/FavorList/FavorList.module.scss
+++ b/src/pages/FavorPage/ui/components/FavorList/FavorList.module.scss
@@ -1,18 +1,29 @@
+.favorCardsGrid {
+	display: flex;
+	flex-wrap: wrap;
+	flex-direction: row;
+	justify-content: center;
+	align-items: center;
+}
+
 .FavorListWrapper {
 	display: flex;
 	align-items: center;
 	justify-content: center;
 	flex-direction: column;
-	min-height: 50vh;
 	background-color: var(--dark-color);
-	padding: calc(var(--index) * 2) 0;
-	filter: drop-shadow(2px 4px 6px #000);
+	padding: 20px 0;
+	box-shadow: 0px 1px 4px 1px #000;
 }
+
 .FavorListContainer {
-	width: 80%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
+
 .FavorList {
-	gap: calc(var(--index));
+	gap: 10px;
 	display: flex;
 	width: 90%;
 	max-width: 1600px;
@@ -21,9 +32,4 @@
 	flex-direction: row;
 	align-items: center;
 	justify-content: center;
-}
-.column {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
 }
