--- a/src/pages/FavorPage/ui/components/ProgressBarSection/ProgressBarSection.module.scss
+++ b/src/pages/FavorPage/ui/components/ProgressBarSection/ProgressBarSection.module.scss
@@ -1,5 +1,5 @@
 .ProgressBarSection {
-	min-height: 70vh;
+	padding: 30px 0;
 	width: 100%;
 	display: flex;
 	flex-direction: column;
@@ -34,7 +34,7 @@
 
 .step,
 .selectedStep {
-	padding: 0 calc(var(--index));
+	padding: 0 10px;
 	font-size: var(--font-size-l);
 	color: var(--font-color-dark);
 	font-family: var(--main-family);
@@ -71,7 +71,7 @@
 	color: var(--font-color-main);
 	font-family: var(--main-family);
 	width: calc(var(--index) * 30);
-	margin-bottom: calc(var(--index) * 2);
+	margin-bottom: 20px;
 }
 .slide {
 	width: calc(var(--index) * 30);
@@ -84,10 +84,10 @@
 .verticalDivider {
 	width: 3px;
 	background-color: var(--font-color-main);
-	margin: 0 calc(var(--index));
+	margin: 0 10px;
 }
 .stepIndex {
-	font-size: calc(var(--index) * 3);
+	font-size: calc(var(--font-size-m) * 3);
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
