--- a/src/pages/MainPage/ui/components/BenefitsSection/BenefitsSection.module.scss
+++ b/src/pages/MainPage/ui/components/BenefitsSection/BenefitsSection.module.scss
@@ -1,49 +1,55 @@
 .benefitsSection {
 	position: relative;
-	padding: calc(var(--index) * 2) 0;
+	padding: 50px 0;
 	background-color: var(--dark-color);
-	min-height: 50vh;
 	width: 100%;
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	margin-bottom: calc(var(--index) * 2);
-	filter: drop-shadow(2px 4px 6px #000);
+	box-shadow: 0px 1px 4px 1px #000;
 }
+
+.benefitsGrid {
+	flex-wrap: wrap;
+	flex-direction: row;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	gap: 30px;
+}
+
 .benefitsInnerBox {
-	width: 80%;
-	height: 90%;
 	display: flex;
 	flex-direction: column;
+	gap: 20px;
 }
+
 .heading {
 	font-family: var(--heading-family);
 	font-size: var(--font-size-l);
 	color: var(--font-color-main);
 }
-.description {
-	font-family: var(--main-family);
-	font-size: var(--font-size-m);
-	color: var(--font-color-dark);
-}
+
 .headingAndDescription {
 	display: flex;
-	flex-direction: row;
-	& > * {
-		flex: 1;
-	}
+	flex-direction: column;
+	margin-left: 50px;
 }
+
 .benefit {
-	margin: calc(var(--index)) 0;
+	margin: 10px 0;
 	width: 100%;
+	max-width: 450px;
 }
+
 .benefitInnerBox {
-	width: 80%;
 	display: flex;
 	flex-direction: row;
-	justify-content: space-between;
+	justify-content: flex-start;
 	align-items: center;
+	gap: 15px;
 }
+
 .icon {
 	font-size: var(--font-size-l);
 	color: var(--font-color-main);
@@ -51,31 +57,36 @@
 
 .text {
 	width: 80%;
-	font-size: var(--font-size-s);
+	font-size: var(--font-size-m);
 	color: var(--font-color-dark);
 	font-family: var(--main-family);
 }
+
 .bgImage {
 	opacity: 0.1;
 	position: absolute;
-	height: 55vh;
-	width: 55vh;
+	height: calc(100% - 30px);
+	aspect-ratio: 1/1;
 	background-image: url(/src/assets/images/large-icon.png);
 	background-position: center center;
 	background-repeat: no-repeat;
 	background-size: cover;
+	top: 15px;
 }
 
 @media (max-width: 800px) {
-	.headingAndDescription {
-		flex-direction: column;
-	}
 	.text {
 		font-size: var(--font-size-m);
 	}
+
+	.benefitsGrid {
+		padding-left: 50px;
+		gap: 10px;
+		justify-content: flex-start;
+	}
+
 	.bgImage {
-		height: calc(var(--index) * 25);
-		width: calc(var(--index) * 25);
+		display: none;
 	}
 }
 
