--- a/src/pages/MainPage/ui/components/CooperationSchemeSection/CooperationSchemeSection.module.scss
+++ b/src/pages/MainPage/ui/components/CooperationSchemeSection/CooperationSchemeSection.module.scss
@@ -4,11 +4,15 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	// background-color: var(--main-color);
 	flex-direction: column;
 }
 .stepsBox {
 	width: 60%;
+	border-radius: 20px;
+	padding: 20px;
+	background-color: var(--main-color);
+	margin-bottom: 20px;
+	box-shadow: 0px 1px 4px 1px #000;
 }
 .innerBox {
 	height: 90%;
@@ -21,23 +25,21 @@
 .heading {
 	display: flex;
 	font-family: var(--heading-family);
-	font-size: calc(var(--index) * 1.5);
+	font-size: calc(var(--font-size-m) * 1.5);
 	color: var(--font-color-main);
 }
 .description {
-	margin-top: calc(var(--index));
+	margin-top: 10px;
 	font-family: var(--main-family);
-	font-size: calc(var(--index) * 1);
+	font-size: var(--font-size-m);
 	color: var(--font-color-dark);
 }
 
-@media (max-width: 700px) {
-	.stepsBox {
-		width: 90%;
-	}
-}
 @media (max-width: 800px) {
 	.cooperationSchemeSection {
 		min-height: 30vh;
+	}
+	.stepsBox {
+		width: 90%;
 	}
 }
