--- a/src/pages/MainPage/ui/components/MainFavorsCarousel/Card/Card.module.scss
+++ b/src/pages/MainPage/ui/components/MainFavorsCarousel/Card/Card.module.scss
@@ -15,18 +15,18 @@
 .title {
 	display: flex;
 	font-family: var(--heading-family);
-	font-size: 2rem;
+	font-size: 1.5rem;
 	color: var(--font-color-main);
 }
 .text {
-	margin-top: calc(var(--index));
+	margin-top: 10px;
 	font-family: var(--main-family);
-	font-size: 1.3rem;
+	font-size: 1rem;
 	color: var(--font-color-dark);
 }
 .img {
-	height: 70%;
-	width: 90%;
+	height: 30%;
+	filter: invert(1);
 }
 
 @media (max-width: 750px) {
