--- a/src/pages/MainPage/ui/components/MainFavorsCarousel/MainFavorsCarousel.module.scss
+++ b/src/pages/MainPage/ui/components/MainFavorsCarousel/MainFavorsCarousel.module.scss
@@ -1,5 +1,5 @@
 .carouselBox {
-	padding: calc(var(--index) * 2) 0;
+	padding: 20px 0;
 	display: flex;
 	flex-direction: row;
 	justify-content: center;
