--- a/src/pages/PartnersPage/components/AboutSection/AboutSection.module.scss
+++ b/src/pages/PartnersPage/components/AboutSection/AboutSection.module.scss
@@ -4,10 +4,9 @@
 	height: 100%;
 }
 .aboutSection {
-	margin: calc(var(--index) * 2) 0;
-	min-height: 40vh;
+	padding: 50px 0;
 	background-color: var(--dark-color);
-	filter: drop-shadow(2px 4px 6px #000);
+	box-shadow: 0px 1px 4px 1px #000;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
@@ -47,12 +46,11 @@
 	font-size: var(--font-size-m);
 	color: var(--font-color-dark);
 	font-family: var(--main-family);
-	margin: calc(var(--index)) 0;
+	margin: 10px 0;
 }
 .preview {
 	opacity: 0.6;
 	width: 35%;
-	filter: drop-shadow(2px 4px 6px black);
 }
 
 @media (max-width: 800px) {
