--- a/src/Layout/Footer/Footer.module.scss
+++ b/src/Layout/Footer/Footer.module.scss
@@ -1,22 +1,23 @@
 .footer {
-	background-color: #0e0e0e;
+	box-shadow: inset 0 0 7px 0 var(--color-frame-shadow);
+	background-color: #fff;
 	display: flex;
 	flex-direction: column;
-	position: relative;
-	overflow: hidden;
 }
+
 .copyright {
-	min-height: 30px;
-	color: #fff;
-	font-family: var(--main-family);
-	background-color: #000000;
+	font-size: 1em;
+	min-height: 3vh;
+	color: #000;
+	font-family: var(--font-family-main);
+	background-color: #fff;
 	display: flex;
 	align-items: center;
 	& > p {
-		font-size: 15px;
-		margin-inline-start: 10px;
+		margin-inline-start: 20px;
 	}
 }
+
 .FooterContainer {
 	width: 100%;
 	max-width: 1600px;
@@ -25,48 +26,67 @@
 	display: flex;
 	justify-content: center;
 }
+
 .mainBox {
 	width: 80%;
-	display: flex;
-	min-height: 200px;
-	color: #fff;
+	color: #000;
 	font-family: var(--main-family);
-	flex-direction: row;
-	& > * {
-		flex: 1;
-	}
+	display: flex;
+	flex-direction: column;
+	gap: 30px;
 }
+
 .colHeading {
-	color: #fff;
-	font-size: 22px;
+	color: #000;
+	font-size: 25px;
 	font-weight: bold;
+	margin-bottom: 20px !important;
 }
+
 .link,
 .contact,
 .option {
-	list-style-type: disc;
+	list-style-type: none;
 	text-decoration: none;
-	color: var(--font-color-dark);
+	color: var(--font-color-secondary);
 	font-size: 20px;
+	gap: 5px;
+	display: flex;
+	flex-direction: column;
 }
+
 .outLink {
-	margin: 5px 3px;
-	color: #fff;
-	font-size: 30px;
-	display: inline-block;
+	color: #000;
 	cursor: pointer;
+	filter: invert(1);
 }
+
+.outLinks {
+	display: flex;
+	flex-direction: row;
+	gap: 20px;
+}
+
+.link {
+	font-family: var(--heading-family);
+	font-size: 23px;
+}
+
 .options {
 	display: flex;
 	flex-direction: row;
 }
 
 .optionsCol,
-.contactsCol {
+.contactsCol,
+.linksCol {
 	display: flex;
 	flex-direction: column;
 	justify-content: flex-start;
-	gap: 10px;
+
+	> * {
+		margin: 4px;
+	}
 }
 
 .optionsCol {
@@ -75,6 +95,7 @@
 		list-style-position: inside;
 	}
 }
+
 .contactsCol,
 .linksCol {
 	& > * {
@@ -82,36 +103,85 @@
 	}
 }
 
-.linksCol {
-	display: flex;
-	flex-direction: column;
-}
-
-.links {
-	display: flex;
-	flex-direction: row;
-}
-
-.divider {
+.longDivider {
 	border-radius: 7px;
-	width: 20%;
-	height: 4px;
-	background-color: var(--light-color);
+	width: 100%;
+	height: 1px;
+	background-color: #474747;
 	margin: 10px 0;
 }
 
-@media (max-width: 800px) {
+.innerLinks {
+	margin: 10px;
+	display: flex;
+	flex-direction: row;
+	& > * {
+		flex: 1;
+	}
+}
+
+.linkBox {
+	display: flex;
+	flex-direction: row;
+	gap: 10px;
+}
+
+.copyrightBox {
+	align-items: center;
+}
+
+@media (max-width: 700px) {
+	.copyright {
+		font-size: 0.7em;
+	}
+}
+
+@media (max-width: 650px) {
+	.outLink {
+		font-size: calc(var(--font-size-l) * 1.5);
+	}
+
 	.mainBox {
 		flex-direction: column;
 		align-items: center;
+	}
+
+	.optionsCol,
+	.contactsCol,
+	.linksCol {
+		margin: 20px 0;
+		align-items: center;
+		& > * {
+			list-style: none;
+		}
+	}
+}
+
+@media (max-width: 1400px) {
+	.mainBox {
 		gap: 20px;
 	}
-	.linksCol,
-	.contactsCol,
-	.optionsCol {
+
+	.outLinks {
+		justify-content: center;
+	}
+
+	.innerLinks {
+		flex-direction: column;
+		gap: 20px;
 		align-items: center;
 	}
-	.optionsCol > * {
-		list-style: none;
+
+	.colHeading {
+		text-align: center;
+	}
+
+	.outLink {
+		display: flex;
+		color: #000;
+		filter: invert(1);
+		cursor: pointer;
+		flex-direction: row;
+		justify-content: center;
 	}
 }
