--- a/src/Layout/Header/Header.module.scss
+++ b/src/Layout/Header/Header.module.scss
@@ -12,6 +12,32 @@
 	display: flex;
 	flex-direction: row;
 	gap: 30px;
+	position: relative;
+	height: 100%;
+	width: 100%;
+	justify-content: center;
+	overflow: hidden;
+}
+
+.mainNavigation {
+	display: flex;
+	flex-direction: row;
+	gap: 30px;
+	position: relative;
+	z-index: 1;
+}
+
+.links {
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	justify-content: center;
+	gap: 20px;
+	height: 100%;
+	position: absolute;
+	width: 100%;
+	justify-content: flex-end;
+	padding-right: 60px;
 }
 
 .burgerWrapper {
