--- a/src/Layout/Layout.module.scss
+++ b/src/Layout/Layout.module.scss
@@ -2,6 +2,7 @@
 	position: absolute;
 	width: 100%;
 	height: 100%;
+	min-height: 100vh;
 	background-image: url(/src/assets/images/background.jpg);
 	z-index: -1;
 }
