--- a/src/pages/ContactPage/ui/ContactsPage.module.scss
+++ b/src/pages/ContactPage/ui/ContactsPage.module.scss
@@ -5,6 +5,7 @@
 	flex-direction: row;
 	align-items: center;
 	height: 100%;
+	min-height: 80vh;
 	padding: 20px 0;
 }
 
@@ -13,7 +14,7 @@
 	max-width: 1600px;
 }
 
-@media (max-width: 800px) {
+@media (max-width: 1000px) {
 	.ContactPageWrapper {
 		flex-direction: column;
 	}
