--- a/src/pages/ContactPage/ui/components/ContactsList/ContactsList.module.scss
+++ b/src/pages/ContactPage/ui/components/ContactsList/ContactsList.module.scss
@@ -14,9 +14,38 @@
 	justify-content: center;
 }
 
+.ipBox {
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
+	margin: 15px 0;
+}
+
+.ipHeading {
+	font-family: var(--heading-family);
+	font-size: var(--font-size-m);
+	color: var(--font-color-main);
+	margin-bottom: 10px;
+}
+
+.ipItem {
+	font-family: var(--main-family);
+	font-size: var(--font-size-m);
+	color: var(--font-color-dark);
+}
+
 @media (max-width: 800px) {
 	.contactsBox,
 	.contactsInnerBox {
 		align-items: center;
+	}
+
+	.ipBox {
+		text-align: center;
+	}
+
+	.ipItem,
+	.ipHeading {
+		font-size: var(--font-size-l);
 	}
 }
