--- a/src/pages/FavorPage/ui/components/FavorCards/Card/Card.scss
+++ b/src/pages/FavorPage/ui/components/FavorCards/Card/Card.scss
@@ -25,6 +25,7 @@
 	align-items: center;
 	justify-content: center;
 	text-align: center;
+	padding: 10px;
 }
 
 .card__title {
@@ -34,7 +35,8 @@
 	font-weight: 700;
 	letter-spacing: 0.08em;
 	text-transform: uppercase;
-	font-size: var(--font-size-l);
+	font-size: var(--font-size-m);
+	position: relative;
 }
 
 .card__overlay {
@@ -53,7 +55,7 @@
 	cursor: pointer;
 
 	&::before {
-		content: 'Read';
+		content: 'Читать';
 		font-size: 12px;
 		text-transform: uppercase;
 		font-weight: 500;
@@ -93,4 +95,16 @@
 		visibility: visible;
 		transition: 0.2s 0.3s;
 	}
+}
+
+.card__background {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-size: cover;
+	background-position: center center;
+	z-index: 0;
+	filter: blur(2px) brightness(0.5);
 }
