--- a/src/pages/MainPage/ui/MainPage.module.scss
+++ b/src/pages/MainPage/ui/MainPage.module.scss
@@ -4,3 +4,14 @@
 	display: flex;
 	flex-direction: column;
 }
+
+.sectionWrapper {
+	position: relative;
+	padding: 50px 0;
+	background-color: var(--dark-color);
+	width: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	box-shadow: 0px 1px 4px 1px #000;
+}
