--- a/src/pages/MainPage/ui/components/AboutSection/AboutSection.module.scss
+++ b/src/pages/MainPage/ui/components/AboutSection/AboutSection.module.scss
@@ -14,6 +14,8 @@
 	display: flex;
 	flex-direction: row;
 	align-items: center;
+	position: relative;
+	overflow: hidden;
 }
 .pictureBox {
 	display: flex;
