--- a/src/pages/MainPage/ui/components/BenefitsSection/BenefitsSection.module.scss
+++ b/src/pages/MainPage/ui/components/BenefitsSection/BenefitsSection.module.scss
@@ -14,7 +14,7 @@
 	flex-direction: row;
 	display: flex;
 	justify-content: center;
-	align-items: center;
+	align-items: flex-start;
 	gap: 30px;
 }
 
@@ -44,22 +44,38 @@
 
 .benefitInnerBox {
 	display: flex;
-	flex-direction: row;
+	flex-direction: column;
 	justify-content: flex-start;
 	align-items: center;
 	gap: 15px;
 }
 
+.iconAndTitle {
+	display: flex;
+	flex-direction: row;
+	justify-content: flex-start;
+	align-items: center;
+	justify-content: space-between;
+}
+
 .icon {
 	font-size: var(--font-size-l);
 	color: var(--font-color-main);
+	line-height: 0;
 }
 
 .text {
 	width: 80%;
 	font-size: var(--font-size-m);
-	color: var(--font-color-dark);
+	color: var(--font-color-main);
 	font-family: var(--main-family);
+}
+
+.description {
+	font-size: var(--font-size-s);
+	font-family: var(--main-family);
+	color: var(--font-color-dark);
+	padding: 10px;
 }
 
 .bgImage {
